# ZemGa-Panel

./: .gitignore  CMakeLists.txt  build.bat  build_run.bat  decode.bat  update_translations.bat
conan/: conanfile.txt  setup_conan.bat
res/exe/translations/: translation.ts
src/common/data_model/contact/: client.cxx  client.hxx  contact.cxx  contact.hxx
src/common/data_model/land/: data_field.cxx  data_field.hxx  land.cxx  land.hxx  land_fields.cxx  land_fields.hxx  landfields.cxx  landfields.hxx  location.cxx  location.hxx  url_field.cxx  url_field.hxx  urlfield.cxx  urlfield.hxx
src/common/data_model/requests/: land_edit.cxx  land_edit.hxx
src/common/json_requester/: json_requester.cxx  json_requester.hxx
src/exe/: main.cxx  util.cxx  util.hxx
src/exe/application/: application.cxx  application.hxx
src/exe/client_dialog/: client_dialog.cxx  client_dialog.hxx
src/exe/client_dialog/client_table/: client_table_model.cxx  client_table_model.hxx  client_table_widget.cxx  client_table_widget.hxx
src/exe/edit_dialog/: edit_dialog.cxx  edit_dialog.hxx
src/exe/edit_dialog/pages/: border_locs_page.cxx  border_locs_page.hxx  docs_page.cxx  docs_page.hxx  file_select_widget.cxx  file_select_widget.hxx  image_select_widget.cxx  image_select_widget.hxx  location_widget.cxx  location_widget.hxx  main_page.cxx  main_page.hxx  photos_page.cxx  photos_page.hxx  preview_page.cxx  preview_page.hxx
src/exe/main_window/: land_table_widget.cxx  land_table_widget.hxx  main_window.cxx  main_window.hxx
src/exe/main_window/land_table/: land_table_model.cxx  land_table_model.hxx  land_table_widget.cxx  land_table_widget.hxx
src/exe/requester/: panel_requester.cxx  panel_requester.hxx  requester.cxx  requester.hxx
